# Evolenia

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  INI.MD  PERFORMANCE.md  README.md  UI_INTEGRATION.md  run.sh  set_profile.sh
presets/: autonomous_gliders.json  explosive_life.json  lenia_creatures.json  predator_prey_chaos.json  stable_colonies.json  swarm_drones.json
runs/2026-02-22/run_20260222_040538/: config.json  metrics.csv  report.md
src/: app.rs  camera.rs  config.rs  headless.rs  input.rs  lab.rs  lab_ui.rs  main.rs  metrics.rs  pipeline.rs  renderer.rs  state_io.rs  tests.rs  world.rs
src/shaders/: compute_evolution.wgsl  compute_resources.wgsl  compute_velocity.wgsl  normalize_mass.wgsl  render.wgsl
