[package]
name = "evolenia"
version = "2.0.0"
edition = "2021"
description = "EvoLenia v2 — Spatially-varying continuous cellular automaton with endogenous evolution"

[dependencies]
wgpu = "24"
winit = "0.30"
glyphon = "0.8"
bytemuck = { version = "1", features = ["derive"] }
pollster = "0.4"
rand = "0.8"
env_logger = "0.11"
log = "0.4"

# Research Lab UI
egui = "0.31"
egui-wgpu = "0.31"
egui-winit = "0.31"
egui_plot = "0.31"

# Serialization & export
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = "0.25"
chrono = "0.4"
